--- a/styles/slider.css
+++ b/styles/slider.css
@@ -1,3 +1,8 @@
+body {
+  align-items: center;
+  justify-content: center;
+}
+
 @-webkit-keyframes scroll {
   0% {
     transform: translateX(0);
@@ -16,37 +21,17 @@
   }
 }
 .slider {
-  background: white;
-  box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.125);
   height: 100px;
   margin: auto;
   overflow: hidden;
   position: relative;
   width: 960px;
 }
-.slider::before,
-.slider::after {
-  background: linear-gradient(to right, white 0%, rgba(255, 255, 255, 0) 100%);
-  content: '';
-  height: 100px;
-  position: absolute;
-  width: 200px;
-  z-index: 2;
-}
-.slider::after {
-  right: 0;
-  top: 0;
-  transform: rotateZ(180deg);
-}
-.slider::before {
-  left: 0;
-  top: 0;
-}
 .slider .slide-track {
   -webkit-animation: scroll 40s linear infinite;
   animation: scroll 40s linear infinite;
   display: flex;
-  width: calc(250px * 14);
+  width: calc(250px * 4);
 }
 .slider .slide {
   height: 100px;
